--- a/API-Server/package.json
+++ b/API-Server/package.json
@@ -1,15 +1,19 @@
 {
   "name": "api-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "ejs": "^2.6.1",
-    "express": "^4.16.3"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "mysql2": "^1.5.3",
+    "node-env-file": "^0.1.8",
+    "pug": "2.0.0-beta11",
+    "sequelize": "^4.37.10"
   }
 }
